tdf#58186 Update Navigator after promote/demote undo

Change-Id: I736d9d2ed863e0978a9abfecdca7dbf7a30f5d81