sw/source/uibase/utlui/content.cxx
@@ -2321,6 +2321,8 @@ void SwContentTree::Notify(SfxBroadcaster & rBC, SfxHint const& rHint)
     {
         SfxListener::Notify(rBC, rHint);
     }
+    if (SfxHintId::DocChanged == rHint.GetId())
+        m_bViewHasChanged = true;
 }
 
 
